[KDirOperator] Highlight the previous dir when going back/up

We have a couple of cases:
 - starting in a/, going to b/, then back(), b is highlighted
 - starting in a/b/, cdUp to "a", "b" is highlighted
 - starting in a/b/c/, cdUp twice to "a", back(), "c" is highlighted

This is useful for orienting oneself while navigating in kfilewidget,
especially in big directories. This can be controlled with
setEnableDirHighlighting().

Add unit test to kdiroperatortest.

BUG: 422748
FIXED-IN: 5.72